--- a/python_basico.ipynb
+++ b/python_basico.ipynb
@@ -127,7 +127,7 @@
         "    lista de amigos de nome_pessoa\n",
         "  \"\"\"\n",
         "  person_index: int = pessoas.index(nome_pessoa)\n",
-        "  friends: int = [pessoas[index] for index, friendship in enumerate(amizades[person_index]) if friendship]\n",
+        "  friends: list = [pessoas[index] for index, friendship in enumerate(amizades[person_index]) if friendship]\n",
         "  return friends\n",
         "\n",
         "def exibe_amigos_em_comum(pessoas, amizades, nome_pessoa_1, nome_pessoa_2):\n",
